manifests/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-app
  labels:
    app.kubernetes.io/name: sandbox-app
    app.kubernetes.io/part-of: sandbox-app
spec:
  tls:
    - hosts:
        - app.sandbox.navy1634.com
      secretName: sandbox-app-tls
  rules:
    - host: app.sandbox.navy1634.com
      http:
        paths:
          - path: /me
            pathType: Prefix
            backend:
              service:
                name: sandbox-app-api
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: sandbox-app-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandbox-app-web
                port:
                  number: 3000
